export const snapshot = {};

snapshot[`getPage 1`] = `
Request {
  bodyUsed: false,
  headers: Headers {},
  method: "GET",
  redirect: "follow",
  url: "https://scrapbox.io/api/pages/takker/%E3%83%86%E3%82%B9%E3%83%88%E3%83%9A%E3%83%BC%E3%82%B8?followRe"... 9 more characters
}
`;

snapshot[`listPages 1`] = `
Request {
  bodyUsed: false,
  headers: Headers {},
  method: "GET",
  redirect: "follow",
  url: "https://scrapbox.io/api/pages/takker?sort=updated"
}
`;
